# deskbot

./: .gitignore  Dockerfile  README.md  arm_demo.py  baseline.py  inference.py  openenv.yaml  pick_demo.py  pyproject.toml  requirements-server.txt  requirements.txt  view_sim.py  visual_test.py
config/: constraints.json  objects.json  task1_easy.yaml  task2_medium.yaml  task3_hard.yaml
deskbot/: client.py  environment.py  models.py  server.py
deskbot/graders/: graders.py
deskbot/reward/: cleanliness.py  order.py  safety.py
deskbot/rl/: env.py  eval.py  train.py
deskbot/simulation/: objects.py  robot.py  scene.py
deskbot/tasks/: easy.py  hard.py  medium.py
docs/: ARCHITECTURE.md  RELEASE_ROADMAP.md  TESTING_AND_VALIDATION.md
server/: app.py
tests/: test_graders.py  test_integration.py  test_reward.py  test_server.py  test_simulation.py
urdf/: deskbot.urdf
