[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deskbot"
version = "0.1.0"
description = "DeskBot — OpenEnv dual-arm robot desk cleaning environment"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rohit Suthar" }]
requires-python = ">=3.10"
keywords = ["openenv", "reinforcement-learning", "robotics", "mujoco"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "mujoco>=3.1.0",
    "numpy>=1.26.4",
    "openai>=1.30.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/SupremeM/deskbot"
Repository = "https://github.com/rohitsux/deskbot"

[tool.setuptools.packages.find]
where = ["."]
include = ["deskbot*", "server*"]
